stopped scrollbars appearing in room

--- a/roomstyle.css
+++ b/roomstyle.css
@@ -1,6 +1,7 @@
 body {
 	background-color: #333;
 	color: #eee;
+	overflow: hidden;
 }
 
 .drag {
